build/testing/core-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  namespace: testing
spec:
  selector:
    matchLabels:
      app: core-api
  template:
    metadata:
      labels:
        app: core-api
    spec:
      containers:
      - name: core-api
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/core-api:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "0.25"
