build/testing/core-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Docs: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations

    # Maximum request body size
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"

    # Rate limiting
    # limit-rpm = limit each IP address to X requests per minute
    # limit-whitelist = do not rate limit clients in the IP range
    nginx.ingress.kubernetes.io/limit-rpm: "300"
  name: core-api-ingress
  namespace: testing
  labels:
    app: core-api
spec:
  rules:
    - host: testing-api.myrainforest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-api-service
                port: 
                  number: 80
